# everywhere

./: .cursorrule  Cargo.toml  README.md  checklist  index.js  readme
everywhere-core/: Cargo.toml
everywhere-core/tele_framework/src/: framework.rs  util.rs
everywhere-core/tele_p2p/: Cargo.toml  expand
everywhere-core/tele_p2p/examples/: chat.rs
everywhere-core/tele_p2p/src/: m_p2p.rs  m_p2p_quic.rs  msg_pack.rs  result.rs
everywhere-ui/: README.md  package.json  pnpm-lock.yaml
everywhere-ui/src-tauri/: Cargo.toml  tauri.conf.json
p2p_chat/: Cargo.toml  README.md  config.yaml  run_test.bat  test_config.yaml  test_manual.yaml  test_output.txt
p2p_chat/src/: main.rs
p2p_chat/tests/: basic_test.rs  message_test.rs
scripts/: create_tauri_vue.py  create_vue_tauri.py  install.py
src/: index.html
src-tauri/src/: main.rs
tele_framework/: Cargo.toml
tele_framework/src/: framework.rs  lib.rs
tele_p2p/: Cargo.toml
tele_p2p/examples/: basic.rs  chat.rs  demo_state.rs
tele_p2p/src/: config.rs  lib.rs  m_p2p.rs  m_p2p_quic.rs  msg_pack.rs  result.rs
