[package]
name = "p2p_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tele_framework = { path = "../tele_framework" }
tele_p2p = { path = "../tele_p2p" }
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
url = "2.4"
chrono = "0.4"
async-trait = "0.1"
parking_lot = "0.12"
bytes = "1" 