[package]
name = "tele_p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tele_framework = { path = "../tele_framework" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
parking_lot = "0.12"
crossbeam-skiplist = "0.1"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
rand = "0.8"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] } 
