[package]
name = "tele_p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tele_framework = { path = "../tele_framework" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
parking_lot = "0.12"
crossbeam-skiplist = "0.1"
prost = "0.12"
lazy_static = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
qp2p = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror={workspace=true}
dashmap = { workspace = true }

[[example]]
name = "basic"
path = "examples/basic.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] } 
